# little-honey-ai-web-novel

./: .gitignore  AI小说计划.txt  DeepSeekNovelWriter.spec  LICENSE  LicenseIssuer.spec  PROJECT_STRUCTURE.md  README.md  gui.py  issue_license.bat  license.json  license_issuer_gui.py  license_manager.py  novel_engine.py  novel_project.py  pyproject.toml  seller_private_key.json
activation-codes/: NW-855C-88B9-D3DC-003E-0D1A-3C49-9999d-20260430-204613.txt
novel_writer/: __init__.py  config.py  context.py  deepseek_client.py  errors.py  license.py  license_admin.py  pipeline.py  prompts.py  state.py
packaging/: license_issuer_entry.py  windows_desktop_entry.py
scripts/: build_windows_exe.ps1
tests/: test_context.py  test_engine_and_pipeline.py  test_gui_behavior.py  test_license.py  test_project.py  test_state.py  test_streaming.py
